--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png" # Apple 端图标
 VITE_DESC_HELLO = "Hello World !"
 VITE_DESC_TEXT = "XMG游戏团队，专业策略游戏团队"
 VITE_DESC_HELLO_OTHER = "Oops !"
-VITE_DESC_TEXT_OTHER = "哎呀，这都被你发现了（ 再点击一次可关闭 ）"
+VITE_DESC_TEXT_OTHER = "项目合作请联系：微信 954158026；line ID ：xmg996"
 
 # 社交链接
 ## 请在 src/assets/socialLinks.json 文件中配置
